fix resize even...maybe bug...background-size not working on IE6 and IE7

--- a/test/test.css
+++ b/test/test.css
@@ -60,12 +60,12 @@ h1, h2, h3, h4, b {
 }
 	.banner ul {
 		list-style: none;
-		width: 300%;
+		width: 400%;
 	}
 	.banner ul li {
 		display: block;
 		float: left;
-		width: 33%;
+		width: 25%;
 		min-height: 350px;
 
 		-o-background-size: 100% 100%;
